--- a/app/assets/stylesheets/oli.css.scss
+++ b/app/assets/stylesheets/oli.css.scss
@@ -280,25 +280,24 @@ src: font-url('proxima_nova_thin.otf');
   right: 0;
   margin-right: 0;
 }
+$flames-height: 363;
 
 .wrapper-oli {
     min-height: 100%;
     height: auto !important;
     height: 100%;
-    margin: 0 auto -363*.6px; /* the bottom margin is the negative value of the footer's height */
+    margin: 0 auto -1 * ($flames-height + 10) * .6px; /* the bottom margin is the negative value of the footer's height */
 }
 .footer-oli, .push-oli {
-    height:  363*.6px; /* .push must be the same height as .footer */
+    height:  ($flames-height + 10)*.6px; /* .push must be the same height as .footer */
 }
 
 .flames{
-  bottom: 0;
   width: 100%;
   background: image-url("flames.png");
-  height: 363*.6px;
+  height: ($flames-height - 10) * .6px;
   z-index: 0;
-  background-size:1721*.6px 363*.6px;
-  margin-top: 0px;
+  background-size:1721*.6px $flames-height * .6px;
 }
 
 .mobile .submit-field-oli, .mobile .submit-field-name-oli{
