--- a/app/views/oli/landing.html.erb
+++ b/app/views/oli/landing.html.erb
@@ -8,12 +8,12 @@
   </div>
 
   <div class="header-text-oli">
-    NEW ONLINE COURSE COMING SOON!
+    NEW ONLINE COURSE COMING SOON
   </div>
 
   <div class="info-oli">
     <div class="body-text-oli text-content-oli">
-      Discover and communicate what you 
+      Discover and share what you 
     truly want and what you have to offer
       to build a career and life you love.
     </div>
