--- a/app/views/oli/landing.html.erb
+++ b/app/views/oli/landing.html.erb
@@ -8,7 +8,7 @@
   </div>
 
   <div class="header-text-oli">
-    NEW ONLINE COURSE COMING SOON TEST
+    NEW ONLINE COURSE COMING SOON
   </div>
 
   <div class="info-oli">
