--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,8 +20,8 @@
 
 </head>
 <body>
-  <p class="notice"><%= notice %></p>
-  <p class="alert"><%= alert %></p>
+  <p class="notice-oli"><%= notice %></p>
+  <p class="alert-oli"><%= alert %></p>
 <%= yield %>
 </body>
 
