min pass length to 6

--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -18,8 +18,11 @@
         <li><a href="#"><%= topic.name %></a></li>
         <% end %>
       </ul>
-  
-    
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
 </nav>
+
+<div class="row">
+
+
+</div> <!-- /.row -->
