--- a/app/assets/stylesheets/course.css.scss
+++ b/app/assets/stylesheets/course.css.scss
@@ -1,3 +1,12 @@
 // Place all the styles related to the Course controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.navbar-oli{
+
+}
+
+.section-wrapper{
+  max-width: 400px;
+  margin: auto;
+}
