--- a/app/views/courses/_template.html.erb
+++ b/app/views/courses/_template.html.erb
@@ -1,5 +1,4 @@
-<nav class="navbar navbar-default navbar-oli" role="navigation">
-  
+<nav class="navbar navbar-default navbar-fixed-top" role="navigation">
   <div class="container-fluid">
     <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
@@ -9,24 +8,20 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#"><%=@course.name%></a>
+      <a class="navbar-brand" href="#">OLI</a>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
         <% @course.topics.each do |topic| %>
-        <li><%= link_to topic.name, course_topic_path(@course, topic.name) %></li>
+        <li><a href="topic"><%= topic.name %></a></li>
         <% end %>
       </ul>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
 </nav>
 
-<div class="section-wrapper">
-  <div class="row sections-row-oli">
-    <% @topic.sections.each do |section| %>
-      <div class="col-md-3"><a href="topic"><%= link_to section.name, course_topic_section_path(@course, @topic.name, section.name) %></a></div>
-    <% end %>
-  </div> <!-- /.row -->
-</div>
+<div class="row">
+  <div class=".col-md-3"> </div>
+</div> <!-- /.row -->
