added ember and updated course UI

--- a/app/assets/stylesheets/fonts.css.scss
+++ b/app/assets/stylesheets/fonts.css.scss
@@ -15,3 +15,15 @@ src: font-url('proxima_nova_scosf_semibold.otf');
 font-family: pn-thin;
 src: font-url('proxima_nova_thin.otf');
 }
+
+@font-face
+{
+font-family: pn-light;
+src: font-url('proxima_nova_light.otf');
+}
+
+@font-face
+{
+font-family: pn-extrabold;
+src: font-url('proxima_nova_scosf_extrabold.otf');
+}
