--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -2,6 +2,13 @@
 
 <div> My courses: </div>
   <% @user.courses.each do |course| %>
-    <div> <%= link_to course.name , course_path(course) %> </div>
+  <div> 
+<% 
+=begin %>
+    <%= link_to course.name , course_path(course) %>
+<% 
+=end %>
+<%= course.name  %>
+</div>
   <% end %>
  <%= link_to "Sign out", destroy_user_session_path, :method => :delete %>
