--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -1,27 +1,6 @@
-<nav class="navbar navbar-default navbar-oli" role="navigation">
-  
-  <div class="container-fluid">
-    <!-- Brand and toggle get grouped for better mobile display -->
-    <div class="navbar-header">
-      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-        <span class="sr-only">Toggle navigation</span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
-      <a class="navbar-brand" href="#"><%=@course.name%></a>
-    </div>
-
-    <!-- Collect the nav links, forms, and other content for toggling -->
-    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-      <ul class="nav navbar-nav">
-        <% @course.topics.each do |topic| %>
-        <li><%= link_to topic.name, course_topic_path(@course, topic.name) %></li>
-        <% end %>
-      </ul>
-    </div><!-- /.navbar-collapse -->
-  </div><!-- /.container-fluid -->
-</nav>
+<% 
+=begin %>
+<%= render 'shared/nav_bar' %>
 
 <div class="section-wrapper">
   <div class="sections-row-oli">
@@ -29,4 +8,11 @@
       <div class="start-items"><a href="topic"><%= link_to section.name, course_topic_section_path(@course, @topic.name, section.name) %></a></div>
     <% end %>
   </div> <!-- /.row -->
-</div>
+</div> <!-- /.section-wrapper -->
+
+<div class="thin-bar-wrapper">
+  <% @activities.each{ |activity|%><div class="notch"></div><% } %>
+</div> <!-- /.thin-bar-wrapper -->
+
+<% 
+=end %>
