--- a/app/assets/javascripts/templates/course.hbs
+++ b/app/assets/javascripts/templates/course.hbs
@@ -1,4 +1,1 @@
- test
- test
- test
- <button class="ladda-button submit-button-oli" data-style="zoom-out"><span class="ladda-label">SUBMIT</span></button>
+{{!--  <button class="ladda-button submit-button-oli" data-style="zoom-out"><span class="ladda-label">SUBMIT</span></button> --}}
