added continue button

--- a/app/assets/javascripts/templates/bar.hbs
+++ b/app/assets/javascripts/templates/bar.hbs
@@ -1,4 +1,4 @@
-  <div id="hover-box" class="test-hover" {{action "goHere" hovering on="click"}}>
+  <div id="hover-box" class="test-hover">
     {{hovering}}
   </div>
 
