--- a/app/assets/javascripts/templates/application.hbs
+++ b/app/assets/javascripts/templates/application.hbs
@@ -1,4 +1,6 @@
 {{outlet nav}}
-{{outlet levels}}
-{{outlet bar}}
-{{outlet course}}
+<div class="course-wrapper">
+  {{outlet levels}}
+  {{outlet bar}}
+  {{outlet activity}}
+</div>
