--- a/app/assets/javascripts/templates/levels.hbs
+++ b/app/assets/javascripts/templates/levels.hbs
@@ -1,8 +1,11 @@
 <div class="section-wrapper">
   <br><br><br><br>
+
   <div class="sections-row-oli row">
     <div class="sections-row-ball"></div>
 
+    <div id="sections-progress" class="sections-progress"></div>
+   
     {{#each controller.sections}}
       <div class="start-items col-lg-2">
         {{#link-to 'sections' this.name disabledWhen=controller.disableLink}}{{this.name}}{{/link-to}} 
