--- a/app/assets/stylesheets/course/thin-bar.css.scss
+++ b/app/assets/stylesheets/course/thin-bar.css.scss
@@ -17,7 +17,7 @@
   height: 30px;
   width: 50px;
   box-shadow: 0px 0px 5px 0px rgba(50, 50, 50, 0.2);  
-  background: rgba(248, 160, 32, .9);
+  background: oli-orange(.9);
   font-size: .5em;
   font-family: pn-semibold;
   text-align: center;
@@ -35,7 +35,7 @@
   border-radius: 1px;
   padding-left:0px;
   margin-right: 1px;
-  background: rgba(248, 160, 32, 1);
+  background: oli-orange(1);
 }
 
 .notch-ember{
@@ -50,5 +50,5 @@
   height: 0; 
   border-left: 7px solid transparent;
   border-right: 7px solid transparent;
-  border-top: 9px solid rgba(248, 160, 32, .9);
+  border-top: 9px solid oli-orange(.9);
 }
