--- a/app/assets/stylesheets/course/sections-bar.css.scss
+++ b/app/assets/stylesheets/course/sections-bar.css.scss
@@ -1,6 +1,7 @@
 @import "oli-root";
 
 .start-items{
+  position: relative;
   display: inline;
   margin: auto;
 }
@@ -8,12 +9,36 @@
 .sections-progress{
   position: absolute;
   z-index: -1;
-  background: oli-orange(1);
+  background: oli-yellow(1);
   left: 0px;
   height: $levels-height - 1;
 }
-  
+
+.oli-yellow{
+  background: oli-yellow(1);
+}
+
+.oli-orange{
+  background: oli-orange(1);
+}
+
+.oli-red{
+  background: oli-red(1);
+}
+
+.sections-progress-inner{
+  display: inline;
+  position: absolute;
+  z-index: -1;
+
+  width: 0;
+  height: 100%;
+  left: 0;
+  // float: left;
+}
+
 .sections-row-ball{
+  // display: none;
   position: absolute;
   background: white image-url('small-flame-icon.png') no-repeat center; 
   background-size: 30*.8px 46*.8px;
@@ -44,13 +69,15 @@
 .start-items{
   border-right:  1px solid rgba(0,0,0, .25);
   padding: 13px 25px 13px 25px;
+  float:none !important;
 }
 
 .sections-row-oli div:last-of-type{
     border-right: none;
-    padding: 0 0 5px 0;
+    // padding: 0 0 5px 0;
+    padding: 13px 0px 13px 0px;
     margin-left: 0px;
-
+    margin-right: -25px;
   }
 
   .sections-row-oli div:last-of-type a{
@@ -60,7 +87,11 @@
     }
 
 .sections-row-oli div:nth-of-type(3){
-    margin-left: -75px;
+    margin-left: -95px;
+  }
+
+.sections-row-oli div:nth-of-type(3) .sections-progress-inner{
+    margin-left: -14px;
   }
 
 .section-wrapper{
