--- a/app/assets/javascripts/templates/activities/video.hbs
+++ b/app/assets/javascripts/templates/activities/video.hbs
@@ -1,9 +1,14 @@
-<br><br><br><br>
+{{#view Oli.VideoView}}
+<div class="video-container">
+  <video id="MY_VIDEO_1" class="video-js vjs-default-skin vjs-big-play-centered" controls
+   preload="auto" width="539" height="400" poster="/assets/trans.png"
+   data-setup="{}" >
+   <source src="http://video-js.zencoder.com/oceans-clip.webm" type='video/webm' />
+  <source src="http://video-js.zencoder.com/oceans-clip.mp4" type='video/mp4' />
 
-<video id="MY_VIDEO_1" class="video-js vjs-default-skin" controls
- preload="auto" width="640" height="264" poster="MY_VIDEO_POSTER.jpg"
- data-setup="{}">
- <source src="MY_VIDEO.mp4" type='video/mp4'>
- <source src="MY_VIDEO.webm" type='video/webm'>
- <p class="vjs-no-js">To view this video please enable JavaScript, and consider upgrading to a web browser that <a href="http://videojs.com/html5-video-support/" target="_blank">supports HTML5 video</a></p>
-</video>
+   <source src="http://video-js.zencoder.com/oceans-clip.ogv" type='video/ogg' />
+   <p class="vjs-no-js">To view this video please enable JavaScript, and consider upgrading to a web browser that <a href="http://videojs.com/html5-video-support/" target="_blank">supports HTML5 video</a></p>
+  </video>
+</div>
+
+{{/view}}
