--- a/app/assets/javascripts/templates/bar.hbs
+++ b/app/assets/javascripts/templates/bar.hbs
@@ -7,7 +7,7 @@
   </div>
 
   <div class="thin-bar-wrapper" id="thin-bar">
-    {{#each item in controller.activities}}{{#view Oli.NotchView contextBinding="item"}}
+    {{#each item in controller.activities}}{{#view Oli.NotchView titleBinding="item"}}
     <div class="notch"></div>
     {{/view}}{{/each}}
     {{#view Oli.TriangleView id="triangle"}}{{/view}}
