--- a/app/assets/stylesheets/course/course.css.scss
+++ b/app/assets/stylesheets/course/course.css.scss
@@ -12,3 +12,13 @@
   width: 500px;
   margin: 0 auto;
 }
+
+.response-box{
+  width: 100%;
+  height: 200px;
+}
+
+.description{
+  font-family: pn-light;
+  font-size: .85em;
+}
