--- a/app/assets/stylesheets/course/sections-bar.css.scss
+++ b/app/assets/stylesheets/course/sections-bar.css.scss
@@ -1,4 +1,10 @@
 @import "oli-root";
+.section-wrapper{
+  width: 375px;
+  margin: 0 auto;
+  margin-right: 40px;
+  text-align: center
+}
 
 .start-items{
   position: relative;
@@ -94,8 +100,4 @@
     margin-left: -14px;
   }
 
-.section-wrapper{
-  width: 400px;
-  margin: 0 auto;
-  text-align: center
-}
+
