fixed add word bug

--- a/app/assets/javascripts/templates/activities/choose_word.hbs
+++ b/app/assets/javascripts/templates/activities/choose_word.hbs
@@ -27,7 +27,7 @@
       {{view Oli.NewWordCheck checked=this.selected type="checkbox" name=check id=this.id class="roundedOne" checkBinding="controller.checked"}}
 
       <label  {{bindAttr for="this.id"}} ></label>
-    </div><div class="select-word">{{#view Oli.NewWordBox class="new-word-box" cont=controller valueBinding=view.theValue placeholder="New Word" }}
+    </div><div class="select-word">{{#view Oli.NewWordBox class="new-word-box" cont=controller value="" placeholder="New Word" }}
 
     {{/view}}
     </div>
