--- a/app/assets/javascripts/templates/activities/share_1.hbs
+++ b/app/assets/javascripts/templates/activities/share_1.hbs
@@ -1,5 +1,14 @@
-Let your friends know about your progress!
+{{#view Oli.Share1View}}
+  
+  <div class="share-1-image">
+    <img src="/assets/share_world.png">
+  </div>
 
-Post 
+  <div class="oli-text">Let the world know about your progress.</div>
+  {{textarea 
+    class="share-1-box" 
+    value=controller.fb_message.content
+    placeholder="Enter your share message!"
+  }}
 
-{{view Ember.TextArea}}
+{{/view}}
