--- a/app/assets/javascripts/templates/activities/choose_word.hbs
+++ b/app/assets/javascripts/templates/activities/choose_word.hbs
@@ -12,7 +12,7 @@
 <div class='select-word-container'>
 {{#each controller.words}}
 <!-- Rounded ONE -->
-<div class='col-lg-4 col-md-4 col-sm-4 col-xs-5 description'>
+<div class='col-xl-4 col-lg-4 col-md-4 col-sm-4 col-xs-5 description'>
   <div class="roundedOne">
 
       {{view Ember.Checkbox checked=this.selected type="checkbox" name=check id=this.id class="roundedOne"}}
