--- a/app/assets/javascripts/templates/activities/share_2.hbs
+++ b/app/assets/javascripts/templates/activities/share_2.hbs
@@ -1,26 +1,24 @@
-<form id="email-form">
-  <div class="input string">
- 
+{{#view Oli.EmailFormView }}
+<div class="share-buddy-image">
+  <img src="/assets/share_buddy.png">
+</div>
+<div class="accountability-text">Let your accountability buddy know about your progress.</div>
+<form role="form">
+  <div class="email-field-outer">
+    <div class="oli-semibold">Email address</div>
+    {{input value=addressEntry.content name='subject'type="email" class="email-field" id="emailField" placeholder="Enter email"}}
+  </div>
 
-    <label>Email</label>
-    {{input value=controller.addressEntry.content name='email' viewName='emailField'}}
+  <div class="email-field-outer">
+    <div class="oli-semibold">Subject</div>
+    {{input id="subjectField" value=subjectEntry.content class="subject-field"}}
   </div>
-  <div class="input string">
-    <label>Subject</label>
-    {{input value=controller.subjectEntry.content name='subject' viewName='subjectField'}}
-  </div>
-  <div class="input string">
-    <label>Body</label>
-    {{textarea value=controller.bodyEntry.content name='body' viewName='bodyField'}}
+
+
+  <div class="email-field-outer">
+    {{textarea value=bodyEntry.content class="body-field"}}
   </div>
 
 </form>
 
-{{!-- 
-{{#user-form-component
-  title="Test title" 
-  modalId="createNewAnalyticsRunModal" 
-  action="actionNameOnTheController"}}
-
-    {{this}}
-some message{{/user-form-component}} --}}
+{{/view}}
