--- a/app/assets/javascripts/templates/activities/video.hbs
+++ b/app/assets/javascripts/templates/activities/video.hbs
@@ -1,7 +1,7 @@
 {{#view Oli.VideoView}}
 <div class="video-container">
   <video id="MY_VIDEO_1" class="video-js vjs-default-skin vjs-big-play-centered" controls
-   preload="auto" width="549" height="400" poster="/assets/trans.png"
+   preload="auto" width="549" height="320" poster="/assets/trans.png"
    data-setup="{}" >
    <source src="http://video-js.zencoder.com/oceans-clip.webm" type='video/webm' />
   <source src="http://video-js.zencoder.com/oceans-clip.mp4" type='video/mp4' />
@@ -10,5 +10,7 @@
    <p class="vjs-no-js">To view this video please enable JavaScript, and consider upgrading to a web browser that <a href="http://videojs.com/html5-video-support/" target="_blank">supports HTML5 video</a></p>
   </video>
 </div>
-
+<div class="transcript">
+  {{{controller.transcript.content.content}}}
+</div>
 {{/view}}
