--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,7 +3,7 @@
 <head>
 <!-- <link href="http://vjs.zencdn.net/4.6/video-js.css" rel="stylesheet"> -->
 <!-- <link href="/assets/video-js.css" rel="stylesheet">
- --><script src="http://vjs.zencdn.net/4.6/video.js"></script>
+ -->
   <title>Get OLI!</title>
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
 <script type="text/javascript">
@@ -16,6 +16,14 @@
   ga('require', 'displayfeatures');
   ga('send', 'pageview');
 </script>
+<meta property="fb:app_id"          content="1452435865004111
+" /> 
+<meta property="og:type"            content="fitness.course" /> 
+<meta property="og:url"             content="http://getoli.com" /> 
+<meta property="og:title"           content="Chocolate Pecan Pie" /> 
+<meta property="og:image"           content="https://fbcdn-dragon-a.akamaihd.net/hphotos-ak-xpa1/t39.2178-6/851565_496755187057665_544240989_n.jpg" /> 
+<meta property="cookbook:author"    content="http://samples.ogp.me/390580850990722" />
+
   <%= stylesheet_link_tag    'application', media: 'all'%>
   <%= javascript_include_tag 'application'%>
   <%= csrf_meta_tags %>
