--- a/app/assets/stylesheets/course/activity.css.scss
+++ b/app/assets/stylesheets/course/activity.css.scss
@@ -13,6 +13,11 @@
 }
 .activity-contents{
   height: 450px;
+  margin-top: -6px;
+  overflow: hidden;
+  width: 100;
+  // max-height: 450px;
+  // min-height: 450px;
   @include oli-font;
 
 }
