--- a/app/assets/javascripts/templates/activity.hbs
+++ b/app/assets/javascripts/templates/activity.hbs
@@ -3,6 +3,6 @@
 </div>
 
 <div class="forward-button-activity">
-  <button class="smaller-button" data-style="zoom-out" {{action "buttonClicked" this on="click"}}><span class="ladda-label"></span>{{controller.button}}</button>
+  <button class="smaller-button" data-style="zoom-out" {{action "buttonClicked" this on="click"}}><span class="ladda-label"></span>{{controller.buttonText}}</button>
   <div class="activity-status description">{{outlet status}}</div>
 </div>
