--- a/app/assets/javascripts/templates/activities/choose_word.hbs
+++ b/app/assets/javascripts/templates/activities/choose_word.hbs
@@ -10,7 +10,7 @@
 {{#view Oli.WordSelectionView}}
 <div class="hidden">{{view.selected}}</div>
 <div class='select-word-container'>
-{{#each controller.words}}
+{{#each view.component.words}}
 <!-- Rounded ONE -->
 <div class='col-xl-4 col-lg-4 col-md-4 col-sm-4 col-xs-5 description'>
   <div class="roundedOne">
