adding word thread page

--- a/app/assets/javascripts/templates/activities/new_word.hbs
+++ b/app/assets/javascripts/templates/activities/new_word.hbs
@@ -9,7 +9,7 @@
     
     </div>
     <div class="select-word">
-      {{view Oli.NewWordBox id="new-word-box" class="new-word-box" value="" placeholder="New Word" }}
+      {{view Oli.NewWordBox id="new-word-box" class="new-word-box oli-text-smaller" value="" placeholder="New Word" }}
     </div>
  </div>
 {{/view}}
