--- a/app/assets/javascripts/templates/activities/share_1.hbs.erb
+++ b/app/assets/javascripts/templates/activities/share_1.hbs.erb
@@ -1,6 +1,6 @@
 {{#view Oli.Share1View}}
   
-  <div class="share-1-image">
+  <div class="share-1-image oli-text">
     <%= image_tag('share_world.png')%>
   </div>
 
