--- a/app/assets/stylesheets/course.css.scss
+++ b/app/assets/stylesheets/course.css.scss
@@ -16,4 +16,10 @@ $levels-height: 45px;
     color: rgba(0,0,0, .75) !important;
 
   }
+
 }
+
+  .description-box{
+    margin-top: 25px;
+    margin-bottom: 15px;
+  }
