--- a/app/assets/javascripts/templates/activities/share_2.hbs.erb
+++ b/app/assets/javascripts/templates/activities/share_2.hbs.erb
@@ -2,20 +2,20 @@
 <div class="share-buddy-image">
  <%= image_tag("share_buddy.png") %> 
 </div>
-<div class="accountability-text">Let your accountability buddy know about your progress.</div>
+<div class="accountability-text oli-text">Let your accountability buddy know about your progress.</div>
 <form role="form">
   <div class="email-field-outer">
     <div class="oli-semibold">Email address</div>
     {{input value=addressEntry.content name='subject'type="email" class="email-field" id="emailField" placeholder="Enter email"}}
   </div>
 
-  <div class="email-field-outer">
+  <div class="email-field-outer oli-text">
     <div class="oli-semibold">Subject</div>
     {{input id="subjectField" value=subjectEntry.content class="subject-field"}}
   </div>
 
 
-  <div class="email-field-outer">
+  <div class="email-field-outer oli-text">
     {{textarea value=bodyEntry.content class="body-field"}}
   </div>
 
