added new question answer activities

--- a/app/assets/javascripts/templates/activities/questions_values.hbs
+++ b/app/assets/javascripts/templates/activities/questions_values.hbs
@@ -6,9 +6,10 @@
     {{controller.comp.content.title}}
   </div>
 
-  {{textarea class="answer-box-large"
-    value=controller.questionEntry.content
-
+  <div class="answer-box">
+    {{}}
+  </div>
+  {{textarea class="qa-values-box" placeholder="Begin listing your values here"
+  value=controller.questionEntryList.content
   }}
-
 {{/view}}
