--- a/app/assets/stylesheets/course/question-answer.css.scss
+++ b/app/assets/stylesheets/course/question-answer.css.scss
@@ -4,8 +4,13 @@
   @include scrollable-box;
   display: inline-block;
   height: 210px;
-  resize: none;
   width: 65%;
+  border-color: rgba(0,0,0,.3);
+}
+
+.answer-box-large{
+  @include scrollable-box;
+  height: 210px;
   // border-color: rgba(0,0,0,.5);
 }
 
