--- a/app/assets/stylesheets/course/question-answer.css.scss
+++ b/app/assets/stylesheets/course/question-answer.css.scss
@@ -5,7 +5,8 @@
   display: inline-block;
   height: 210px;
   width: 65%;
-  border-color: rgba(0,0,0,.3);
+  border-color: rgba(0,0,0,.2);
+  margin-right: 5px;
 }
 
 .answer-box-large{
@@ -26,4 +27,10 @@
 
 .qa-title{
   margin-top: 25px;
+}
+
+.bank-box{
+  @include scrollable-box;
+  height: 100px;
+  border: 1px dashed rgba(0,0,0,.2);
 }
